--- a/Mahjong/src/app/game/games/games.html
+++ b/Mahjong/src/app/game/games/games.html
@@ -1,10 +1,9 @@
-    <h1>{{title}}</h1>
     <h2>My Games</h2>
     <ul class="games">
       <li *ngFor="let game of games"
         [class.selected]="game === selectedGame"
         (click)="onSelect(game)">
-        <span class="badge">{{game.id}}</span> {{game.name}}
+        <span class="badge">{{game.createdBy.name}}</span> {{game.gameTemplate.id}}
       </li>
     </ul>
     <game-detail [game]="selectedGame"></game-detail>
