--- a/Mahjong/src/app/game/games/games.html
+++ b/Mahjong/src/app/game/games/games.html
@@ -3,7 +3,7 @@
       <li *ngFor="let game of games"
         [class.selected]="game === selectedGame"
         (click)="onSelect(game)">
-        <span class="badge">{{game.createdBy.name}}</span> {{game.gameTemplate.id}}
+        <span class="badge {{game.state}}">{{game.createdBy.name}}</span> {{game.gameTemplate.id}}
       </li>
     </ul>
     <game-detail [game]="selectedGame"></game-detail>
