--- a/Mahjong/src/app/game/new-game/new-game.html
+++ b/Mahjong/src/app/game/new-game/new-game.html
@@ -1,21 +1,25 @@
 <div class="container">
     <h1>New Game</h1>
-  <form (ngSubmit)="onSubmit()">
+  <form (ngSubmit)="createGame()" #gameForm="ngForm">
         <div class="form-group">
             <label for="template">Template</label>
-            <select class="form-control" id="template" required>
+            <select class="form-control" id="templateName" [(ngModel)]="model.templateName" name="templateName">
                 <option *ngFor="let temp of templates" [value]="temp">{{temp}}</option>
             </select>
             
         </div>
         <div class="form-group">
-            <label for="minplayers">Min # Players</label>
-            <input type="text" class="form-control" id="minplayers">
+            <label for="minPlayers">Min # Players</label>
+            <input type="text" class="form-control" id="minPlayers"
+            required
+            [(ngModel)]="model.minPlayers" name="minPlayers">
         </div>
         <div class="form-group">
-            <label for="maxplayers">Max # Players</label>
-            <input type="text" class="form-control" id="maxplayers">
+            <label for="maxPlayers">Max # Players</label>
+            <input type="text" class="form-control" id="maxPlayers"
+            required
+            [(ngModel)]="model.maxPlayers" name="maxPlayers">
         </div>
-        <button type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-success" [disabled]="!gameForm.form.valid">Submit</button>
     </form>
 </div>
