--- a/Mahjong/src/app/app.component.css
+++ b/Mahjong/src/app/app.component.css
@@ -3,6 +3,7 @@
       color: white;
     }
     .games {
+      float:left;
       margin: 0 0 2em 0;
       list-style-type: none;
       padding: 0;
@@ -16,7 +17,7 @@
       background-color: #EEE;
       margin: .5em;
       padding: .3em 0;
-      height: 5em;
+      /*height: 5em; */
       border-radius: 4px;
     }
     .games li.selected:hover {
