--- a/Mahjong/src/app/game/game-detail/game-detail.html
+++ b/Mahjong/src/app/game/game-detail/game-detail.html
@@ -1,8 +1,4 @@
     <div *ngIf="game">
-      <h2>{{game.name}} details!</h2>
-      <div><label>id: </label>{{game.id}}</div>
-      <div>
-        <label>name: </label>
-        <input [(ngModel)]="game.name" placeholder="name"/>
-      </div>
+      <span>{{game.state}}</span>
+      <div><a href="/games/{{game.id}}">Play</a></div>
     </div>
