--- a/Mahjong/src/app/game/games/games.html
+++ b/Mahjong/src/app/game/games/games.html
@@ -1,9 +1,9 @@
     <h2>My Games</h2>
     <ul class="games">
       <li *ngFor="let game of games"
-        [class.selected]="game === selectedGame"
         (click)="onSelect(game)">
-        <span class="badge {{game.state}}">{{game.createdBy.name}}</span> {{game.gameTemplate.id}}
+        <span class="badge {{game.state}}">{{game.createdBy.name}}</span>
+        <span>{{game.gameTemplate.id}}</span>
+        <game-detail *ngIf="selectedGame === game" [game]="game"></game-detail>
       </li>
     </ul>
-    <game-detail [game]="selectedGame"></game-detail>
