--- a/Mahjong/src/app/core/header/header.html
+++ b/Mahjong/src/app/core/header/header.html
@@ -35,18 +35,12 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+      <ul *ngIf='user' class="nav navbar-nav navbar-right">
+        <li><a href="">Profile</a></li>
+        <li><a href="profile/logout">Logout</a></li>
+      </ul>
+      <ul *ngIf='!user' class="nav navbar-nav navbar-right">
+        <li><a href="http://mahjongmayhem.herokuapp.com/auth/avans?callbackUrl=http://localhost:4200/profile/login">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
