--- a/Mahjong/src/app/game/new-game/new-game.html
+++ b/Mahjong/src/app/game/new-game/new-game.html
@@ -14,6 +14,18 @@
             required
             [(ngModel)]="model.minPlayers" name="minPlayers"
             #minPlayers="ngModel">
+            <div *ngIf="minPlayers.errors && (minPlayers.dirty || minPlayers.touched)"
+                class="alert alert-danger">
+                <div [hidden]="!minPlayers.errors.required">
+                Minimum players is required
+                </div>
+                <div [hidden]="!minPlayers.errors.minlength">
+                Name must be at least 4 characters long.
+                </div>
+                <div [hidden]="!minPlayers.errors.maxlength">
+                Name cannot be more than 24 characters long.
+                </div>
+            </div>
         </div>
         <div class="form-group">
             <label for="maxPlayers">Max # Players</label>
